Fix text/icon alignment of checkbox/radio

--- a/src/components/checkbox/checkbox-material-like/checkbox-material-like.scss
+++ b/src/components/checkbox/checkbox-material-like/checkbox-material-like.scss
@@ -11,7 +11,7 @@
 // font settings
 $checkboxFontSize: 1.125rem;
 $checkboxLineHeight: 1.35rem; // 1.2
-$checkboxIconFontSize: 0.75rem;
+$checkboxIconFontSize: 1.125rem;
 $checkboxFontFamily: inherit;
 
 // Need to use string here due to:
@@ -55,7 +55,7 @@ $variants: "dark", "light";
         }
       }
 
-      &.is-tabbed{
+      &.is-tabbed {
         outline: 1px solid $checkboxFocusBorderColor;
         outline-offset: 3px;
       }
@@ -96,21 +96,22 @@ $variants: "dark", "light";
         &:after,
         &:before {
           position: absolute;
-          top: $checkboxLineHeight - $checkboxFontSize;
+          top: ($checkboxLineHeight - $checkboxIconFontSize) / 2;
           left: 0;
           padding: $padding;
-        }
-        &:after {
           width: #{$checkboxIconFontSize};
           height: #{$checkboxIconFontSize};
+          box-sizing: border-box;
+        }
+        &:after {
           border: $border solid $checkboxIconBorderColor;
           content: "";
           display: inline-block;
           z-index: 1;
         }
         &:before {
-          font-size: $checkboxIconFontSize;
-          line-height: $checkboxIconFontSize;
+          font-size: calc(#{$checkboxIconFontSize} - #{$padding * 2} - #{$border * 2});
+          line-height: calc(#{$checkboxIconFontSize} - #{$padding * 2} - #{$border * 2});
           color: $checkboxIconColor;
           border: $border solid transparent;
           margin-top: 1px; // optical icon alignment
